// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu> Default story renders snapshot 1`] = `
<div
  aria-label="menu-options"
  className="rbt-menu dropdown-menu show"
  id="default-menu"
  onMouseDown={[Function]}
  role="listbox"
  style={
    Object {
      "display": "block",
      "maxHeight": "300px",
      "overflow": "auto",
      "position": "relative",
    }
  }
>
  <a
    aria-selected={false}
    className="dropdown-item"
    href="#"
    id="-item-0"
    onClick={[Function]}
    onMouseDown={[Function]}
    role="option"
  >
    Item 1
  </a>
  <a
    aria-selected={false}
    className="dropdown-item"
    href="#"
    id="-item-1"
    onClick={[Function]}
    onMouseDown={[Function]}
    role="option"
  >
    Item 2
  </a>
  <a
    aria-selected={false}
    className="dropdown-item"
    href="#"
    id="-item-2"
    onClick={[Function]}
    onMouseDown={[Function]}
    role="option"
  >
    Item 3
  </a>
</div>
`;

exports[`<Menu> Empty story renders snapshot 1`] = `
<div
  aria-label="menu-options"
  className="rbt-menu dropdown-menu show"
  id="empty-menu"
  onMouseDown={[Function]}
  role="listbox"
  style={
    Object {
      "display": "block",
      "maxHeight": "300px",
      "overflow": "auto",
      "position": "relative",
    }
  }
>
  <a
    className="dropdown-item disabled"
    href="#"
    onClick={[Function]}
    role="option"
  >
    No matches found.
  </a>
</div>
`;

exports[`<Menu> HeaderAndDivider story renders snapshot 1`] = `
<div
  aria-label="menu-options"
  className="rbt-menu dropdown-menu show"
  id="header-and-divider"
  onMouseDown={[Function]}
  role="listbox"
  style={
    Object {
      "display": "block",
      "maxHeight": "300px",
      "overflow": "auto",
      "position": "relative",
    }
  }
>
  <div
    className="dropdown-header"
    role="heading"
  >
    This is a menu header
  </div>
  <div
    className="dropdown-divider"
    role="separator"
  />
  <a
    aria-selected={false}
    className="dropdown-item"
    href="#"
    id="-item-0"
    onClick={[Function]}
    onMouseDown={[Function]}
    role="option"
  >
    Item 1
  </a>
</div>
`;
